@@ -1,6 +1,7 @@
 # List of gnulib modules needed for GNU paxutils.
 # A module name per line. Empty lines and comments are ignored.
 
+closeout
 dirname
 full-write
 getdate
