@@ -1,7 +1,7 @@
 /* Remote connection server.
 
-   Copyright (C) 1994, 1995, 1996, 1997, 1999, 2000, 2001, 2003, 2004, 2005
-   Free Software Foundation, Inc.
+   Copyright (C) 1994, 1995, 1996, 1997, 1999, 2000, 2001, 2003, 2004,
+   2005, 2006 Free Software Foundation, Inc.
 
    This program is free software; you can redistribute it and/or modify it
    under the terms of the GNU General Public License as published by the
@@ -32,6 +32,7 @@
    MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE.  */
 
 #include "system.h"
+#include <closeout.h>
 #include <localedir.h>
 #include <safe-read.h>
 #include <full-write.h>
@@ -260,6 +261,7 @@ Manipulate a tape drive, accepting commands from a remote process.\n\
   --help     Output this help.\n"),
 	      program_name);
       printf (_("\nReport bugs to <%s>.\n"), PACKAGE_BUGREPORT);
+      close_stdout ();
     }
 
   exit (status);
@@ -563,6 +565,7 @@ main (int argc, char **argv)
     case 'v':
       version_etc (stdout, "rmt", PACKAGE_NAME, PACKAGE_VERSION,
 		   "John Gilmore", "Jay Fenlason", (char *) NULL);
+      close_stdout ();
       return EXIT_SUCCESS;
 
     case -1:
